[package]
name = "litesql"
version = "0.1.0"
edition = "2021"
description = "An attempt to write a relational database in Rust."
license = "MIT"
repository = "https://github.com/adhamsalama/litesql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.99"
sqlparser = "0.35.0"
